# hpp-centroidal-dynamics

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .mergify.yml  CMakeLists.txt  README.md  default.nix  flake.nix  package.xml  pyproject.toml
.github/workflows/: nix.yml  update-flake-lock.yml
cmake2/: FindCDD.cmake  FindCLP.cmake
include/centroidal-dynamics-lib/: Stdafx.hh  centroidal_dynamics.hh  logger.hh  solver_LP_abstract.hh  solver_LP_clp.hh  solver_LP_qpoases.hh  static_equilibrium.hh  stop-watch.hh  util.hh
include/hpp/centroidal-dynamics/: CMakeLists.txt  Stdafx.hh  centroidal_dynamics.hh  config.hh  local_config.hh  logger.hh  solver_LP_abstract.hh  solver_LP_clp.hh  solver_LP_qpoases.hh  stop-watch.hh  util.hh
include/robust-equilibrium-lib/: config.hh  logger.hh  solver_LP_abstract.hh  solver_LP_clp.hh  solver_LP_qpoases.hh  static_equilibrium.hh  stop-watch.hh  util.hh
python/: CMakeLists.txt  centroidal_dynamics_python.cpp
python/test/: binding_tests.py
src/: CMakeLists.txt  centroidal_dynamics.cpp  logger.cpp  solver_LP_abstract.cpp  solver_LP_clp.cpp  solver_LP_qpoases.cpp  static_equilibrium.cpp  stop-watch.cpp  util.cpp
test/: CMakeLists.txt  test_LP_solvers.cpp  test_static_equilibrium.cpp
