<?xml version='1.0'?>
<package format='2'>
    <name>hpp-centroidal-dynamics</name>
    <version>4.15.0</version>
    <description>Testing equilibrium of a system in contact with the environment</description>

    <maintainer email='guilhem.saurel@laas.fr'>Guilhem Saurel</maintainer>
    <license>BSD</license>

    <author>Andrea Del Prete</author>
    <author>Pierre Fernbach</author>
    <author>Steve Tonneau</author>

    <buildtool_depend>catkin</buildtool_depend>
</package>
