SET(LIBRARY_NAME ${PROJECT_NAME})

SET(${LIBRARY_NAME}_SOURCES
  centroidal_dynamics.cpp
  solver_LP_abstract.cpp
  solver_LP_qpoases.cpp
  solver_LP_clp.cpp
  util.cpp
  logger.cpp
  stop-watch.cpp
  )

ADD_LIBRARY(${LIBRARY_NAME} SHARED ${${LIBRARY_NAME}_SOURCES})

TARGET_LINK_LIBRARIES(${LIBRARY_NAME} ${CDD_LIBRARIES} ${qpOASES_LIBRARY})
TARGET_INCLUDE_DIRECTORIES(${LIBRARY_NAME} PUBLIC ${CDD_INCLUDE_DIRS})
PKG_CONFIG_USE_DEPENDENCY(${LIBRARY_NAME} eigen3)

IF(CLP_FOUND)
  TARGET_LINK_LIBRARIES(${LIBRARY_NAME} ${CLP_LIBRARIES})
ENDIF(CLP_FOUND)

INSTALL(TARGETS ${LIBRARY_NAME} DESTINATION lib)
